# person_id

./: .conda_env  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
models/: reid.ts
person_id_pi/: README.md  requirements.txt
person_id_pi/src/person_id_pi/: __init__.py  cli.py  face_embedder.py  face_pipeline.py  face_types.py  identity_engine.py  identity_store.py
person_id_pi/tests/: test_identity_engine.py
scripts/: check_yolo_drinks.py  export_models.py
src/: cli.py  feature_extractor.py  profile_store.py  profile_tracker.py
src/person_id_pi/: beverage_config.py  beverage_detector.py  beverage_pipeline.py  beverage_store.py  beverage_types.py  cli.py  cli_helpers.py  face_embedder.py  face_pipeline.py  face_types.py  identity_config.py  identity_engine.py  identity_store.py
tests/: test_beverage_detector.py  test_beverage_pipeline.py  test_beverage_store.py  test_identity_store.py
