[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "person_id_pi"
version = "0.1.0"
description = "Face-embedding + evidence-accumulation pipeline for cross-video identity."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "typer>=0.12.0",
  "insightface>=0.7.3",
  "onnxruntime>=1.17.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
